fullSandbox11072023/force-app/main/default/objects/Take_5_Record__c/Take_5_Record__c.object-meta.xml
<CustomObject>
    <label>Take 5 Record</label>
    <nameField>
        <displayFormat>t5-{00000000}</displayFormat>
        <label>Take 5 Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Take 5 Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>