fullSandbox11072023/force-app/main/default/objects/Take_5_Record__c/fields/Attachment_Name__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Name__c</fullName>
    <label>Attachment Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>