fullSandbox11072023/force-app/main/default/objects/Take_5_Record__c/fields/Take_5_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Take_5_Attachment__c</fullName>
    <label>Take 5 Attachment</label>
    <length>64</length>
    <type>Text</type>
</CustomField>